# tflite-with-native-ndk

./: .gitmodules
ANDROID_HOME/: analytics.settings
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeCamera.cpp  NativeCamera.h  NativeCameraGPU.cpp  NativeCameraGPU.h  Renderer.cpp  Renderer.h  RendererGPU.cpp  native-lib.cpp
app/src/main/java/com/example/myapplication/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
